--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<app-default-login-layout 
-    title="Login into your account"
-    primaryBtnText="Login now"
-    secondaryBtnText="Sign up"
-></app-default-login-layout>
+<app-login></app-login>
 
 <router-outlet></router-outlet>
