--- a/src/app/default-login-layout/default-login-layout/default-login-layout.component.html
+++ b/src/app/default-login-layout/default-login-layout/default-login-layout.component.html
@@ -3,6 +3,7 @@
     <img src="/assets/svg/logo.svg" alt="" />
     <h2> {{ title }} </h2>
 
+    <ng-content></ng-content>
     <button class="btn-wrapper">
       <button class="btn-primary"> {{primaryBtnText}} </button>
       <div class="divider">
